fix in the z-index of modal and header

--- a/src/components/molecules/modal/modal.scss
+++ b/src/components/molecules/modal/modal.scss
@@ -10,7 +10,7 @@
     background-color: rgba(255, 255, 255, 0.5);
     width: 100%;
     height: 100vh;
-    z-index: 5;
+    z-index: 99;
 }
 .modal{
     position: absolute;
