--- a/src/components/organisms/header/Header.scss
+++ b/src/components/organisms/header/Header.scss
@@ -7,7 +7,7 @@
   background-color: #3d3d3d;
   position: fixed;
   top: 0px;
-  z-index: 99;
+  z-index: 98;
   display: flex;
   align-items: center;
   justify-content: space-between;
